// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should reflect expenses length correctly 1`] = `
<div>
  <h1>
    Viewing 
    22
     
    expenses 
     with a total of 
    $0.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense 
     with a total of 
    $0.00
  </h1>
</div>
`;
